Fixed update rate of temperature Added message when temperature is updated Ignored cache for dash temperature

--- a/locales/en.json
+++ b/locales/en.json
@@ -85,7 +85,8 @@
         "title": "Edit the dashboard",
         "cancel_last": "Cancel last action",
         "confirm_all": "Confirm all changes"
-      }
+      },
+      "temps_updated": "Temperatures updated"
     },
     "infos": {
       "title": "Information",
