--- a/locales/fr.json
+++ b/locales/fr.json
@@ -84,7 +84,8 @@
       "edit": {
         "title": "Modifier le tableau de bord",
         "cancel_last": "Annuler la dernière action",
-        "confirm_all": "Valider les changements"
+        "confirm_all": "Valider les changements",
+        "quit": "Quitter"
       },
       "temps_updated": "Températures mises à jour"
     },
