--- a/locales/en.json
+++ b/locales/en.json
@@ -89,7 +89,8 @@
       },
       "manual_update": "Manually update dashboard",
       "temps_updated": "Temperatures updated",
-      "updated_manually": "Dashboard updated"
+      "updated_manually": "Dashboard updated",
+      "temp_outdated": "The latest value was recorded on {time}"
     },
     "infos": {
       "title": "Information",
