--- a/locales/fr.json
+++ b/locales/fr.json
@@ -168,6 +168,11 @@
         "invalid_query": "Veuillez sélectionner un site, une ressource de température et une ressource de chauffage pour commencer",
         "noise_filter": "Filtrage des données bruitées",
         "highlight_issues": "Mise en évidence des écarts"
+      },
+      "chart": {
+        "avg_clean": "Consommation normale",
+        "avg_noisy": "Déviation de la consommation",
+        "ideal_line": "Ligne de consommation idéale"
       }
     },
     "objectives": {
