--- a/locales/fr.json
+++ b/locales/fr.json
@@ -75,9 +75,9 @@
     "year": "signature de cette année | signature de l'année dernière | signature d'il y a {count} ans"
   },
   "consumption_agregations": {
-    "hour": "Consommations horaires",
-    "day": "Consommations quotidiennes",
-    "week": "Consommations hebdomadaires"
+    "hour": "Consommation horaire",
+    "day": "Consommation quotidienne",
+    "week": "Consommation hebdomadaire"
   },
   "menu": {
     "admin": "Administration",
@@ -189,7 +189,8 @@
       "download": {
         "avg_temp": "Température moyenne",
         "consumption": "Consommation"
-      }
+      },
+      "avarage_temp_diff": "Différence moyenne de température"
     },
     "objectives": {
       "title": "Objectifs",
