Logging in sends remember_me Sessions display expire date Fixed error when force-logged out

--- a/locales/en.json
+++ b/locales/en.json
@@ -155,7 +155,8 @@
       },
       "sessions": {
         "title": "Sessions",
-        "delete": "Delete session"
+        "delete": "Delete session",
+        "expires": "expires"
       }
     },
     "explore": {
